--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     </div>
 </div>
 <div id="app">
-    <input type="text" class="form-control" :value="gols" @input="setValue($event)">
+    <input type="text" class="form-control" v-model="gols">
     <button class="btn btn-primary" @click="showAlert()">Fim de Jogo</button>
+    {{gols}}
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.2/dist/vue.js"></script>
 <script>
