--- a/index.html
+++ b/index.html
@@ -5,43 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Tabela do Brasileirão serie A 2018</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
     <div class="row">
-        <h3>Tabela do Brasileirão serie A 2018</h3>
+        <div class="col-md-12">
+            <h3 style="text-align: center; padding: 2%;">Tabela do Brasileirão serie A 2018</h3>
+        </div>
     </div>
 </div>
 <div id="app">
-    <input type="text" class="form-control" v-model="gols">
-    <button class="btn btn-primary" @click="showAlert()">Fim de Jogo</button>
-    <div class="container">
-        <div class="row">
-            {{time.nome}}
-            <img :src="time.escudo">
-        </div>
+    <div class="col-md-12">
+        <table class="table  table-bordered">
+            <thead>
+            <tr>
+                <th scope="col">Time</th>
+                <th scope="col">Pontos</th>
+                <th scope="col">GM</th>
+                <th scope="col">GS</th>
+                <th scope="col">Saldo</th>
+            </tr>
+            </thead>
+            <tbody>
+                <tr v-for="time in times">
+                    <th scope="row"><img :src="time.escudo"> {{time.nome}}</th>
+                    <td>{{time.pontos}}</td>
+                    <td>{{time.gm}}</td>
+                    <td>{{time.gs}}</td>
+                    <td> </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.2/dist/vue.js"></script>
 <script>
-    class Time{
-        constructor(nome,escudo){
+    class Time {
+        constructor(nome, escudo) {
             this.nome = nome;
             this.escudo = escudo;
+            this.pontos = 0;
+            this.gm = 0;
+            this.gs = 0;
         }
     }
+
     new Vue({
         el: "#app",
-        data:{
+        data: {
             gols: 3,
-            time: new Time("Corinthias", "assets/corinthians_60x60.png")
+            times: [
+                new Time('Palmeiras', 'assets/palmeiras_60x60.png'),
+                new Time('Internacional', 'assets/internacional_60x60.png'),
+                new Time('Flamengo', 'assets/flamengo_60x60.png'),
+                new Time('Atlético-MG', 'assets/atletico_mg_60x60.png'),
+                new Time('Santos', 'assets/santos_60x60.png'),
+                new Time('Botafogo', 'assets/botafogo_60x60.png'),
+                new Time('Atlético-PR', 'assets/atletico-pr_60x60.png'),
+                new Time('Corinthians', 'assets/corinthians_60x60.png'),
+                new Time('Grêmio', 'assets/gremio_60x60.png'),
+                new Time('Fluminense', 'assets/fluminense_60x60.png'),
+                new Time('Bahia', 'assets/bahia_60x60.png'),
+                new Time('Chapecoense', 'assets/chapecoense_60x60.png'),
+                new Time('São Paulo', 'assets/sao_paulo_60x60.png'),
+                new Time('Cruzeiro', 'assets/cruzeiro_60x60.png'),
+                new Time('Sport', 'assets/sport_60x60.png'),
+                new Time('Ceará', 'assets/ceara_60x60.png'),
+                new Time('Vitória', 'assets/vitoria_60x60.png'),
+                new Time('Vasco', 'assets/vasco_60x60.png'),
+                new Time('América-MG', 'assets/america_mg_60x60.png'),
+                new Time('Paraná', 'assets/parana_60x60.png'),
+            ]
         },
-        methods:{
-            showAlert(){
+        methods: {
+            showAlert() {
                 alert("Fim de Jogo")
             },
-            setValue($event){
+            setValue($event) {
                 console.log($event.data)
             }
         }
